project(MCNP)
cmake_minimum_required(VERSION 2.8)
enable_language(Fortran)

# Make the scripts in the "cmake" directory available to CMake
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
include(mcnp_macros)

mcnp_setup_build()
mcnp_setup_options()
mcnp_setup_flags()
mcnp_setup_rpath()

if (BUILD_MCNP514)
  add_subdirectory(MCNP514)
endif ()
if (BUILD_MCNP515)
  add_subdirectory(MCNP515)
endif ()
if (BUILD_MCNP516)
  add_subdirectory(MCNP516)
endif ()
if (BUILD_MCNPX27)
  add_subdirectory(MCNPX27)
endif ()
if (BUILD_MCNP602)
  add_subdirectory(MCNP602)
endif ()
if (BUILD_MCNP610)
  add_subdirectory(MCNP610)
endif ()
if (BUILD_MCNP611)
  add_subdirectory(MCNP611)
endif ()

message("")
